# UMMAYA

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.aimock.yml  install.sh  npm-shrinkwrap.json  package-lock.json  package.json  pyproject.toml  vulture_whitelist.py
.github/: syft-sbom.yaml
.github/workflows/: cc-byte-identical-guard.yml  ci.yml  deploy-live-gateway.yml  docs.yml  evidence.yml  package-npm.yml  plugin-validation.yml  publish-homebrew-cask-artifacts.yml  publish-homebrew.yml  publish-npm.yml  release-manifest.yml  sbom.yml  security.yml  tui-attribution-gate.yml  tui-ipc-drift.yml  tui-smoke.yml
.specify/: feature.json
Casks/: ummaya.rb
Formula/: kosax.rb
assets/: ummaya-demo.txt
docker/: Dockerfile  Dockerfile.gateway
docs/: configuration.md  conventions.md  live-adapter-gateway.md  observability.md  packaging.md  presentation.md  release-checklist.md  release-packaging-plan.md  testing.md  vision.md
docs-site/: astro.config.mjs  package.json
docs-site/public/: llms-full.txt  llms.txt  site.webmanifest
docs/adr/: ADR-007-plugin-tool-id-namespace.md  ADR-009-mcpb-compat-lazy-shim.md  ADR-010-workspace-bash-permission-boundary.md  ADR-011-hwp-conversion-bridge.md  ADR-012-legacy-office-libreoffice-bridge.md
docs/api/: README.md
docs/decisions/: fork-command-decision.md
docs/deferred/: 032-ipc-stdio-hardening.md
docs/demo/: README.md  readme_scenario_backend.py  record-readme-demo-session.sh  record-readme-demo.sh  run-readme-demo.sh  ummaya-readme.tape
docs/design/: brand-system.md  document-harness.md  k-exaone-reasoning-mode.md  mvp-tools.md  retrieval.md  verification-fabric-v2.md
docs/onboarding/: cc-tool-layer-lazycodex-intake.md  codex-continuation.md  five-primitive-harness.md
docs/plugins/: README.md  architecture.md  permission-tier.md  pydantic-schema.md  quickstart.ko.md  review-checklist.md  search-hint.md  security-review.md  testing.md
docs/release/: homebrew-official-readiness.md
docs/release-notes/: epic-467.md  package-release-template.md
docs/requirements/: cc-tool-layer-scope-contract.md  epic-p1-p2-llm.md  epic-p3-tool-system.md  epic-p5-plugin-dx.md  epic-p6-docs-smoke.md  ummaya-migration-tree.md
docs/research/: 2026-06-17-tui-raw-json-tool-call-recovery.md  cc-original-tool-layer-port-2026-06-12.md  cc-tool-layer-inventory.json  codex-llm-quality-setup.md  infrastructure-survey-submit.md  korean-national-document-form-corpus-2026-06-12.md  policy-mapping.md  pre-release-tool-surface-deep-research-2026-06-17.md  release-packaging-deep-research.md  tool-schema-loop-deep-reference-2026-05-27.md  tool-system-migration-plan.md  ummaya-docs-architecture-visualization-options-2026-05-15.md  ummaya-docs-audience-audit-2026-05-15.md  ummaya-docs-full-audit-2026-06-17.md  ummaya-docs-goal-brief-2026-05-15.md  ummaya-docs-writing-audit-2026-05-15.md  ummaya-user-docs-content-architecture.md
docs/scenarios/: gov24-minwon-submit.md  mydata-live.md  npki_portal_session.md
docs/security/: tool-template-security-spec-v1.md
docs/spec-1978/: rehearsal-2026-04-27.md
docs/spec-1979/: pre-epic-research.md
docs/spec-kexaone-tool-wiring/: handoff-prompt.md
docs/wireframes/: README.md  _shared.mjs  proposal-iv.mjs  ui-a-onboarding.mjs  ui-b-repl-main.mjs  ui-c-permission.mjs  ui-d-extensions.mjs  ui-e-auxiliary.mjs  ummaya-mascot-proposal.mjs
eval/scenarios/: national_ax_citizen_requests_v1.yaml
evidence/: registry.yaml
evidence/scenarios/: document_harness_v1.yaml  national_ax_citizen_requests_v1.yaml
infra/cloud-run/: live-gateway.cloudbuild.yaml
prompts/: manifest.yaml  session_guidance_v1.md  system_v1.md
research/: README.md
scripts/: aimock-bun.ts  audit-env-registry.py  bootstrap-live-gateway-cloud-run.sh  build-homebrew-cask-artifact.mjs  build_schemas.py  bun-pty-capture.ts  cast_to_frames.py  cc_byte_identical_guard.py  check-npm-package.mjs  deploy-live-gateway-cloud-run.sh  docs_generate.py  llm_swap_parity_audit.sh  pty-scenario.py  realuse-audit-report.py  render-homebrew-cask.mjs  render-homebrew-formula.mjs  render_c4_diagrams.sh  stage-homebrew-downloads.mjs  strip-npm-source-maps.mjs  sync_readme_env.py  tui-frame-extract.sh  tui-realuse-audit.py  tui-realuse-matrix.py  tui-realuse-pty-capture.py  tui-scene-extract.sh  tui-text-debug.sh  tui-tmux-capture.sh
specs/026-retrieval-dense-embeddings/: plan.md  research.md  spec.md  tasks.md
specs/031-five-primitive-harness/: tasks.md
specs/035-onboarding-brand-port/: quickstart.md
specs/1636-plugin-dx-5tier/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/1637-p6-docs-smoke/: data-model.md  plan.md  research.md  smoke-checklist.md  spec-review-notes.md  spec.md  tasks.md
specs/1979-plugin-dx-tui-integration/: debug-direct.txt  debug-enter.txt  debug-help.txt  debug-install.txt  delegation-flow-design.md  domain-harness-design.md  next-session-prompt-v6-handoff.md  smoke-1979.txt
specs/2077-kexaone-tool-wiring/: quickstart.md
specs/2292-cc-parity-audit/: cc-parity-audit.md
specs/2296-ax-mock-adapters/: data-model.md  quickstart.md  spec.md  tasks.md
specs/2297-zeta-e2e-smoke/: data-model.md  research.md  smoke-citizen-taxreturn-pty.txt  spec.md
specs/2298-system-prompt-rewrite/: next-session-prompt-zeta-handoff.md  research.md  spec.md
specs/2521-llm-swap-cc-rebuild/: insights-multi-tool-layout-fix.md  multi-tool-layout-handoff.md  parity-audit-final-report.md  parity-matrix.md  post-d11c835-raw.cast  post-d11c835-summary.txt  post-d11c835-timeline.txt  pr-description.md  quickstart.md  smoke-bytecopy-pty.txt
specs/2522-tool-surface-v4/: research-nfa-wire.md  tasks.md
specs/2638-tool-system-residue/: agent-tool-classification.md  plan.md  research.md  spec.md  tasks.md
specs/2639-s3-ui-guard/: plan.md  spec.md  tasks.md
specs/2766-runtime-ux-bugs/: dispatch-tree.md  plan.md  research-ctrl-o.md  research-hira.md  research-streamgate.md  spec.md  tasks.md
tests/: conftest.py  test_parity_audit.sh
tui/: package.json
(+7569 files in other folders)
